<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewGameActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_info" />
    
 	<Button
        android:id="@+id/button_random_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_random_opponent"
        android:onClick="findRandomOpponent" />
 	
 	<Button
        android:id="@+id/button_friends_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_friends_list"
        android:onClick="goToFriendsList" />
 	
 	 <Button
        android:id="@+id/button_search_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search_opponent"
        android:onClick="goToSearchOpponent" />

</LinearLayout>
